parametrage du .properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.password=${DB_Password}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 server.servlet.session.timeout=360s
-termesDeclencheurs=hemoglobine A1C, microalbumine, taille, poids, fumeur, anormal, cholesterol, vertige, rechute, reaction, anticorps
+termesDeclencheurs=hémoglobine A1C,microalbumine,taille,poids,fumeur,anormal,cholestérol,vertige,rechute,réaction,anticorps
