--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 server.port=8083
 termesDeclencheurs=hémoglobine A1C,microalbumine,taille,poids,fumeur,anormal,cholestérol,vertige,rechute,réaction,anticorps
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
